--- a/views/css/notification.css
+++ b/views/css/notification.css
@@ -12,7 +12,7 @@ body {
     padding: 0px;
     margin: 0px;
     overflow: hidden;
-    width: 300px;
+    /*width: 300px;*/
     max-height: 150px;
     min-height: 150px;
     height: 150px;
@@ -27,11 +27,11 @@ body {
     margin:0px;
     display:block;
     position: absolute;
-    top: 0px;
+    top: 24px;
     color: #fff;
     font-size: .6em;
     font-weight: normal;
-    width: auto;
+    /*width: auto;*/
 }
 
 .page_nav {
@@ -40,8 +40,7 @@ body {
 
 .controls {
     position: absolute;
-    top:0px;
-    right:0px;
+    bottom: 0px;
     width: 100%;
 }
 
@@ -74,6 +73,7 @@ body {
     left: 0;
     text-align: left;
 }
+
 .controls button:last-child {
     border-top-left-radius: 4px;
     right: 0;
@@ -86,33 +86,7 @@ body {
     box-shadow: 0 1px 2px rgba(160,160,160,.75);
 }
 
-/*.brick-1 {
-    /* These shouldn't be displayed anyway...*!/
-    /*display:none;*!/
-    width: 40px;
-    height: 40px;
-}
-
-.brick-2 {
-    font-size:0.8em;
-    width: 90px;
-    height: 90px;
-}
-
-.brick-3 {
-    font-size:1.0em;
-    width: 190px;
-    height: 190px;
-}
-
-.brick-4 {
-    font-size:1.2em;
-    width: 390px;
-    height: 390px;
-}*/
-
-.isotope,
-.isotope .isotope-item {
+.isotope, .isotope .isotope-item {
   /* change duration value to whatever you like */
   -webkit-transition-duration: .5s;
   -webkit-animation-timing-function: ease-out;
@@ -125,13 +99,6 @@ body {
 .isotope .isotope-item {
   -webkit-transition-property: -webkit-transform, opacity;
 }
-
-.image h1 {
-}
-
-.image img {
-}
-
 
 .text {
     background-color: #000;
@@ -146,39 +113,9 @@ body {
 .text p {
     padding: 10px;
     z-index: 1;
-    max-height: 40%;
     overflow: hidden;
     text-overflow: ellipsis;
-}
-
-.text p.darkened {
-    background-color: #222;
-}
-
-.text h1 {
-    
-}
-
-.brick-1 p {
-
-}
-
-.brick-2 p{
-    font-size: 0.85em;
-    position: absolute;
-    bottom: 0;
-}
-
-.brick-3 p{
     font-size: 1.2em;
-    position: absolute;
-    bottom: 0;
-}
-
-.brick-4 p{
-    font-size: 1.5em;
-    position: absolute;
-    bottom: 0;
 }
 
 .grey, .color0 {
